# i8042

./: Cargo.toml  build.rs  rust-toolchain.toml
src/: controller.rs  keyboard.rs  main.rs  mouse.rs
src/server/: mod.rs  proto.rs
